<?xml version="1.0"?>
<package format="2">
  <name>arg_devbot_description</name>
  <version>0.0.0</version>
  <description>The Devbot2.0 description package</description>

  <maintainer email="markus.schratter@v2c2.at">Markus Schratter</maintainer>

  <url type="website">https://autonomousracing.ai/</url>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

</package>

